Fix spacing in buttons

--- a/app/components/modules/Music/SongDetail/SongDetail.module.scss
+++ b/app/components/modules/Music/SongDetail/SongDetail.module.scss
@@ -214,6 +214,7 @@
     width: 100%; 
     height: 40px;
     order: 6;
+    padding: 4px 0 0 3px;
 
     @include music-breakpoint("sm") {    
       width: 140px;
