--- a/app/components/modules/Shop/CartButton/CartButton.module.scss
+++ b/app/components/modules/Shop/CartButton/CartButton.module.scss
@@ -15,6 +15,7 @@
   width: calc(100% - 40px); 
   margin: 0 20px;
   height: 40px;  
+  padding: 3px 0 0 3px;
 
   @include shop-breakpoint("md") { 
     position: fixed;
