--- a/app/components/modules/Shop/ItemDetail/ItemDetail.module.scss
+++ b/app/components/modules/Shop/ItemDetail/ItemDetail.module.scss
@@ -117,6 +117,10 @@
     order: 6;
     font-weight: bold;
     padding: 4px 0 0 3px;
+
+    &:hover {
+      font-weight: bold !important;
+    }
   }
  
   .titleText {
